--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p class="t3">What do I do?</p><br/>
                 <img class="d1" src="https://udemy-images.udemy.com/course/480x270/1801322_2ab9_2.jpg?width=720">
                 <p class="t4">I Design Websites 
-                    <p class="t4-1">Like i said earlier, I am a Front-End developer, and as such I take responsibility for the design and feel of the website. From a beautiful User Interface(UI) to an awesome User Experience(UX)</p>
+                    <p class="t4-1">Like i said earlier, I am a Front-End Developer, and as such I take responsibility for the design and feel of the website. From a beautiful User Interface(UI) to an awesome User Experience(UX)</p>
                 </p>
 
             </div>
