--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="container">
                         
                 <p class="name">Ogbe Daniel</p>
-                <p class="job">Front-End developer</p>
+                <p class="job">Front-End Developer</p>
                 
             </section>
         </div>
@@ -45,9 +45,9 @@
          <!--first paragraph-->
 
         <section  class="p1">
-            <p class="t1">Hello,</p></br>
+            <p class="t1">Hello,</p>
            <p class="t2">
-                My name is Ogbe Daniel and I am a Front End Developer. I started my journey in April 2018 and eversince I have pbeen able to grow and improve my skills. It was a rough road I must admit, but my courage and persistence kept me going. I code in order to slove the day-to-day activities of the modern society. I'm always open to learn new things and take on tasks.
+                My name is Ogbe Daniel and I'm a Front End Developer. I started my journey in April 2018 and eversince I have been able to grow and improve my skills. It was a rough road I must admit, but my courage and persistence kept me going. I code in order to solve the day-to-day problems of the modern society. I'm always open to learn new things and take on tasks.
                 <p class="t2-1">Besides web development I also pay attention to app development and spend my free time learning more about them</p>
            </p>
         </section>
