--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="https://www.instagram.com/dhar_niell/" target="_blank"><i class="fab  fa-fw fa-instagram" ></i></a>
             </div>
             <div class="hold">
-                <a href="" target="_blank"><i class="fab  fa-fw fa-facebook" ></i></a>   
+                <a href="https://www.facebook.com/daniel.ogbe.509" target="_blank"><i class="fab  fa-fw fa-facebook" ></i></a>   
             </div>     
                 
         </div>
