--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
                 
             </section>
         </div>
-         
+        <img class="avatar" src="assets\avataaars.png">
          <!--first paragraph-->
 
         <section  class="p1">
+            <div class="spinning-box"></div>
             <p class="t1">Hello,</p>
            <p class="t2">
                 My name is Ogbe Daniel and I'm a Front End Developer. I started my journey in April 2018 and eversince I have been able to grow and improve my skills. It was a rough road I must admit, but my courage and persistence kept me going. I code in order to solve the day-to-day problems of the modern society. I'm always open to learn new things and take on tasks.
@@ -56,8 +57,8 @@
             <div class="p2">
                 <p class="t3">What do I do?</p>
                 <img class="d1" src="https://udemy-images.udemy.com/course/480x270/1801322_2ab9_2.jpg?width=720">
-                <p class="t4">I Design Websites 
-                    <p class="t4-1">Like i said earlier, I am a Front-End Developer, and as such I take responsibility for the design and feel of the website. From a beautiful User Interface(UI) to an awesome User Experience(UX)</p>
+                <p class="t4">I Design Websites  
+                    <p class="t4-1">Like i said earlier, I am a Front-End Developer, and as such I take responsibility for the design and feel of the website. From a beautiful User Interface(UI) to an awesome User Experience(UX). Also I make sure that websites easily adapt to any device</p>
                 </p>
 
             </div>
