--- a/About.html
+++ b/About.html
@@ -24,7 +24,8 @@
            </div>
            <footer>
                 <a  class="a" href="https://www.instagram.com/dhar_niell/" target="_blank"><i class="fab  fa-fw fa-instagram" ></i></a>
-                <a  class="a" href="https://www.facebook.com/daniel.ogbe.509" target="_blank"><i class="fab  fa-fw fa-facebook" ></i></a>   
+                <a  class="a" href="https://www.facebook.com/daniel.ogbe.509" target="_blank"><i class="fab  fa-fw fa-facebook" ></i></a> 
+                <a class= "a" href="" target="_blank"><i class="fab  fa-fw fa-github"></i></a>  
            </footer>
        </body>
    </html>
