Home page Update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
        </head>
        <body>
+           <div class="colunms row">
+                <div class="col-md-6 col-1">
+                    <img class="avatar" src="\assets\avataaars.png">
+                    <p class="Name">Ogbe Daniel</p>
+                    <p class="Job">Front End Developer</p> 
+                </div>
+                
+                <div class="col-md-6 col-2">
+                    <a  class="link00" href="About.html">About</a>
+                    <a class="link01" href="Contact.html">Contact</a>  
+                </div> 
+           </div>
        </body>
    </html>
