--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
         <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
        </head>
        <body>
-           <div class="colunms row">
-                <div class="col-md-6 col-1">
-                    <img class="avatar" src="\assets\avataaars.png">
-                    <p class="Name">Ogbe Daniel</p>
-                    <p class="Job">Front End Developer</p> 
+           <div class="row">
+                <div class="col-md-6">
+                    <div class="c1">
+                        <img class="avatar" src="\assets\avataaars.png">
+                        <p class="Name">Ogbe Daniel</p>
+                        <p class="Job">Front End Developer</p> 
+                    </div>    
                 </div>
                 
-                <div class="col-md-6 col-2">
-                    <a  class="link00" href="About.html">About</a>
-                    <a class="link01" href="Contact.html">Contact</a>  
+                <div class="col-md-6" style="background-color: mediumpurple;">
+                    <div class="c2">
+                        <a  class="link00" href="About.html">About</a>
+                        <a class="link01" href="Contact.html">Contact</a>
+                   </div>      
                 </div> 
            </div>
        </body>
