--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/assets/animate.css">
        </head>
 
        <body>
@@ -18,9 +19,11 @@
                 <a  class="link3" href="About.html">About</a>
             </nav>
             <div class="Contact">
-                <h1 class="h1">Contact</h1>
-                <div class="forms row">
+                    <h1 class="h1">Contact</h1>
+                <div class="animated fadeInUp delay-0s">
+                 <div class="forms row">
                     <div class="col-md-6">
+                      
                         <form>
                           <input type="text" required placeholder="Name">
                         </form>
@@ -37,6 +40,7 @@
                         </form>
                         <button class="Send">Send</button>
                     </div>
+                 </div>    
                </div>
             </div>
             <footer class="foot">
