--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
         <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/assets/animate.css">
        </head>
        <body>
            <div class="row">
                 <div class="col-md-6">
                     <div class="c1">
-                        <img class="avatar" src="\assets\avataaars.png">
-                        <p class="Name">Ogbe Daniel</p>
-                        <p class="Job">Front End Developer</p> 
+                        <div class=" animated bounceInUp delay-0s">
+                          <img class="avatar" src="\assets\avataaars.png">
+                          <p class="Name">Ogbe Daniel</p>
+                          <p class="Job">Front End Developer</p> 
+                        </div>
                     </div>    
                 </div>
                 
