--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
    <html>
        <head>    
-        <title>Daniel Ogbe : Home</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/animate.css">
+         <title>Daniel Ogbe : Home</title>
+         <meta charset="UTF-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <!--custom stylesheet-->
+         <link rel="stylesheet" href="/css/style.css">
+         
+         <!--fontawesome-->
+         <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
+  
+         <!--googlefonts-->
+         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  
+         <!--bootstrap--> 
+         <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
+        
+         <!--animate.css-->
+         <link rel="stylesheet" href="/assets/animate.css">
        </head>
        <body>
            <div class="row">
