--- a/About.html
+++ b/About.html
@@ -4,14 +4,21 @@
         <title>Daniel Ogbe : About</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--custom stylesheet-->
         <link rel="stylesheet" href="/css/style.css">
+         
+        <!--fontawesome-->
         <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
+  
+        <!--googlefonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link rel="stylesheet" href="animate.min.css">
+  
+        <!--bootstrap--> 
         <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
-       </head>
-
-       <body>
+        
+        <!--animate.css-->
+        <link rel="stylesheet" href="/assets/animate.css">
+        <body>
 
            <nav class="nav-bar">
                <a  class="link1" href="index.html">Daniel</a>
