--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                         </div>
                     </div>    
                 </div>
-                
+        
                 <div class="col-md-6" style="background-color: mediumpurple;">
                     <div class="c2">
-                        <a  class="link00" href="About.html">About</a>
-                        <a class="link01" href="Contact.html">Contact</a>
+                        <a  class="link00 animated flipInX delay-0s" href="About.html">About</a>
+                        <a class="link01 animated flipInX delay-0s" href="Contact.html">Contact</a>  
                    </div>      
                 </div> 
            </div>
