--- a/About.html
+++ b/About.html
@@ -28,8 +28,8 @@
 
            <!--content-->
            <div class="about">
-               <h1>About</h1>
-               <p class="t1"> My name is Ogbe Daniel and I'm a Front End Developer. I started my journey in April 2018 and eversince I have been able to grow and improve my skills. It was a rough road I must admit, but my courage and persistence kept me going. I code in order to solve the day-to-day problems of the modern society. I'm always open to learn new things and take on tasks. Aside from web development I also pay attention to mobile app development and hope to grow in that area as well. </p>
+               <h1 class="h2 animated flipInX delay-0s">About</h1>
+               <p class="t1 animated fadeInUp delay-0"> My name is Ogbe Daniel and I'm a Front End Developer. I started my journey in April 2018 and eversince I have been able to grow and improve my skills. It was a rough road I must admit, but my courage and persistence kept me going. I code in order to solve the day-to-day problems of the modern society. I'm always open to learn new things and take on tasks. Aside from web development I also pay attention to mobile app development and hope to grow in that area as well. </p>
            </div>
            <footer>
                 <a  class="a" href="https://www.instagram.com/dhar_niell/" target="_blank"><i class="fab  fa-fw fa-instagram" ></i></a>
