--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
        </head>
        <body>
            <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 wrapper">
                     <div class="c1">
-                        <div class=" animated bounceInUp delay-0s">
+                        <div class="animated bounceInUp delay-0s">
                           <img class="avatar" src="\assets\avataaars.png">
                           <p class="Name">Ogbe Daniel</p>
                           <p class="Job">Front End Developer</p> 
@@ -31,10 +31,10 @@
                     </div>    
                 </div>
         
-                <div class="col-md-6" style="background-color: mediumpurple;">
+                <div class="col-md-6 wrapper" style="background-color: mediumpurple;">
                     <div class="c2">
-                        <a  class="link00 animated flipInX delay-0s" href="About.html">About</a>
-                        <a class="link01 animated flipInX delay-0s" href="Contact.html">Contact</a>  
+                        <a  class="link animated flipInX delay-0s" href="about.html">about</a>
+                        <a class="link animated flipInX delay-0s" href="contact.html">contact</a>  
                    </div>      
                 </div> 
            </div>
