--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>    
-      <title>Daniel Ogbe : Contact</title>
+      <title>Daniel Ogbe : contact</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!--custom stylesheet-->
@@ -22,11 +22,11 @@
    <body>
      <nav class="nav-bar">
         <a  class="link1" href="index.html">Daniel</a>
-        <a class="link2" href="Contact.html">Contact</a>
-        <a  class="link3" href="About.html">About</a>
+        <a class="link2" href="contact.html">contact</a>
+        <a  class="link3" href="about.html">about</a>
      </nav>
-     <div class="Contact">
-       <h1 class="h1 animated flipInX delay-0s">Contact</h1>
+     <div class="contact">
+       <h1 class="h1 animated flipInX delay-0s">contact</h1>
        <div class="animated fadeInUp delay-0s">
           <div class="forms row">
             <div class="col-md-6">
