--- a/About.html
+++ b/About.html
@@ -22,13 +22,13 @@
 
            <nav class="nav-bar">
                <a  class="link1" href="index.html">Daniel</a>
-               <a class="link2" href="contact.html">contact</a>
-               <a  class="link3" href="about.html">about</a>
+               <a class="link2" href="contact.html">Contact</a>
+               <a  class="link3" href="about.html">About</a>
            </nav>
 
            <!--content-->
            <div class="about">
-               <h1 class="h2 animated flipInX delay-0s">about</h1>
+               <h1 class="h2 animated flipInX delay-0s">About</h1>
                <p class="t1 animated fadeInUp delay-0"> My name is Ogbe Daniel and I'm a Front End Developer. I started my journey in April 2018 and eversince I have been able to grow and improve my skills. It was a rough road I must admit, but my courage and persistence kept me going. I code in order to solve the day-to-day problems of the modern society. I'm always open to learn new things and take on tasks. Aside from web development I also pay attention to mobile app development and hope to grow in that area as well. </p>
            </div>
            <footer>
