--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
         <a  class="link3" href="about.html">about</a>
      </nav>
      <div class="contact">
-       <h1 class="h1 animated flipInX delay-0s">contact</h1>
+       <h1 class="h1 animated flipInX delay-0s">Contact</h1>
        <div class="animated fadeInUp delay-0s">
           <div class="forms row">
             <div class="col-md-6">
