--- a/About.html
+++ b/About.html
@@ -22,8 +22,8 @@
 
            <nav class="nav-bar">
                <a  class="link1" href="index.html">Daniel</a>
-               <a class="link2" href="Contact.html">Contact</a>
-               <a  class="link3" href="About.html">About</a>
+               <a class="link2" href="contact.html">contact</a>
+               <a  class="link3" href="about.html">about</a>
            </nav>
 
            <!--content-->
