--- a/Contact.html
+++ b/Contact.html
@@ -22,8 +22,8 @@
    <body>
      <nav class="nav-bar">
         <a  class="link1" href="index.html">Daniel</a>
-        <a class="link2" href="contact.html">contact</a>
-        <a  class="link3" href="about.html">about</a>
+        <a class="link2" href="Contact.html">contact</a>
+        <a  class="link3" href="About.html">about</a>
      </nav>
      <div class="contact">
        <h1 class="h1 animated flipInX delay-0s">Contact</h1>
