--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <a  class="link3" href="about.html">about</a>
       </nav>
       <!--content-->
-      <div class="wrapper container">
+      <div class="content-is-centered container">
         <div class="about">
           <div class="heading">
             <h1 class="h2 animated flipInX delay-0s">About</h1>
