--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       <a class="link2" href="contact.html">contact</a>
       <a  class="link3" href="about.html">about</a>
     </nav>
-    <div class="contact">
+    <div class="content-is-centered contact">
       <h1 class="h1 animated flipInX delay-0s">Contact</h1>
       <div class="animated fadeInUp delay-0s">
         <form action="" method="GET">
