--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,19 @@
   <body>
     <nav class="nav-bar">
       <a  class="link1" href="index.html">Daniel</a>
-      <a class="link2" href="contact.html">contact</a>
-      <a  class="link3" href="about.html">about</a>
+      <div id="men" class="menu">
+        <span class="fa fa-times" id="close"></span>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+     </div>
+     <span id="toggle" class="fa fa-bars"></span>
+     <a class="link2" href="contact.html">contact</a>
+     <a  class="link3" href="about.html">about</a>
     </nav>
     <div class="content-is-centered contact">
       <h1 class="h1 animated flipInX delay-0s">Contact</h1>
       <div class="animated fadeInUp delay-0s">
-        <form action="" method="GET">
+        <form action="https://usebasin.com/f/3d0a6e5da0dc" method="POST">
           <div class="forms row">
             <div class="col-md-6">
               <input type="text" name="name" required placeholder="Name">
