--- a/about.html
+++ b/about.html
@@ -21,8 +21,15 @@
     <body>
       <nav class="nav-bar">
         <a  class="link1" href="index.html">Daniel</a>
+        <div id="men" class="menu">
+            <span class="fa fa-times" id="close"></span>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </div>
+        <span id="toggle" class="fa fa-bars"></span>
         <a class="link2" href="contact.html">contact</a>
         <a  class="link3" href="about.html">about</a>
+        
       </nav>
       <!--content-->
       <div class="content-is-centered container">
