--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,16 @@
     
     <!--animate.css-->
     <link rel="stylesheet" href="/assets/animate.css">
+
+
   </head>
   <body>
     <nav class="nav-bar">
       <a  class="link1" href="index.html">Daniel</a>
       <div id="men" class="menu">
         <span class="fa fa-times" id="close"></span>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
      </div>
      <span id="toggle" class="fa fa-bars"></span>
      <a class="link2" href="contact.html">contact</a>
@@ -55,4 +57,8 @@
       <a class= "a" href="https://github.com/OkeOgbe" target="_blank"><i class="fab  fa-fw fa-github"></i></a>
     </footer>
   </body>
+
+  <!--javascript-->
+  <script src="\js\script.js"></script>
+
 </html>
