--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
         <a  class="link1" href="index.html">Daniel</a>
         <div id="men" class="menu">
             <span class="fa fa-times" id="close"></span>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </div>
         <span id="toggle" class="fa fa-bars"></span>
         <a class="link2" href="contact.html">contact</a>
@@ -48,4 +48,8 @@
         <a class= "a" href="https://github.com/OkeOgbe" target="_blank"><i class="fab  fa-fw fa-github"></i></a>
       </footer>
     </body>
+
+    <!--javascript-->
+    <script src="\js\script.js"></script>
+
   </html>
