--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,12 @@
       <a  class="link1" href="index.html">Daniel</a>
       <div id="men" class="menu">
         <span class="fa fa-times" id="close"></span>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-     </div>
+        <div class="content-is-centered">
+         <a href="about.html">About</a>
+         <a href="contact.html">Contact</a>
+        </div>
+       
+       </div>
      <span id="toggle" class="fa fa-bars"></span>
      <a class="link2" href="contact.html">contact</a>
      <a  class="link3" href="about.html">about</a>
