--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
 
     <!--googlefonts-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Josefin+Sans|Open+Sans&display=swap" rel="stylesheet">
 
     <!--bootstrap-->
     <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap.css" rel="stylesheet">
@@ -71,141 +71,161 @@
 
 
     <div id="body">
-    <div class="hero wrapper">
-        <div class="hero_content">
-            <div class="hero_img_holder">
-                <img src="assets/img/avataaars.png" class="w-100">
-            </div>
-            <div class="hero_text_holder mt-5">
-                <h2>Hi, I'm Ogbe Daniel<br>
-                    I'm a <span id="Job" class="job">Frontend Developer</span></h2>
-            </div>
-            <a href="#about" class="angle_down animated bounce">
-                <i class="fas fa-angle-double-down"></i>
-            </a>
-        </div>
-    </div>
-
-    <div class="About wrapper ml-5" id="about">
-        <h1> <span class="orange">#</span>ABOUT ME✌️</h1>
-        <p>Things you'd like to know</p>
-
-        <div class="about_content">
-            <p>Hi! My name is <span class="orange">Ogbe Daniel</span>. I am a Web Developer, and I'm very passionate and
-                dedicated to my work.
-                With 2 years experience as a Web developer, I believe I have acquired the skills and knowledge
-                necessary to make your project a success. I enjoy every step of the design process, from discussion and
-                collaboration to concept and execution, but I find the most satisfaction in seeing the finished product
-                do everything for you that it was created to do.</p>
-        </div>
-        <a href="#contact" class="btn hvr-bounce-in mt-2">Send Message </a>
-    </div>
-
-    <div id="skills" class="wrapper ml-5">
-
-        <h2 class="mb-4"><span class="blue">#</span>Some of my Abilities💪</h2>
-
-        <div class="progress_holder mt-2">
-            <div class="progress_bar" id="htmlProgress"></div>
-            <span>HTML5 90%</span>
-        </div>
-        <div class="progress_holder mt-2">
-            <div class="progress_bar" id="cssProgress"></div>
-            <span>CSS 85%</span>
-        </div>
-        <div class="progress_holder mt-2">
-            <div class="progress_bar" id="jsProgress"></div>
-            <span>Javascript 60%</span>
-        </div>
-        <div class="progress_holder mt-2">
-            <div class="progress_bar" id="figmaProgress"></div>
-            <span>Figma 50% </span>
-        </div>
-
-    </div>
-
-
-    <div class="wrapper ml-5" id="projects">
-        <h2 class="mb-4"><span class="orange">#</span>Some of my Projects</h2>
-        <p>Some of my beautifully coded projects</p>
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="project_card">
-                        <div class="project_card_content">
-                            <div class="">
-                                <h3>Westkoast Official Website</h3>
-                                <p>I was part of the awesome team that was responsible for bringing the design to life
-                                </p>
-                                <a href="https:://westkoast.netlify.com" target="_blank" class="btn hvr-bounce-in">Visit
-                                    Site</a>
-                            </div>
-                        </div>
-                    </div>
+        <div class="hero wrapper">
+            <div class="hero_content">
+                <div class="hero_img_holder">
+                    <img src="assets/img/avataaars.png" class="w-100">
                 </div>
-                <div class="col-md-4">
-                    <div class="project_card">
-                        <div class="project_card_content">
-                            <div class="">
-                                <h3>Westkoast Official Website</h3>
-                                <p>I was part of the awesome team that was responsible for bringing the design to life
-                                </p>
-                                <a href="https:://westkoast.netlify.com" class="btn hvr-bounce-in">Visit Site</a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="hero_text_holder mt-5">
+                    <h2>Hi, I'm Ogbe Daniel<br>
+                        I'm a <span id="Job" class="job">Frontend Developer</span></h2>
                 </div>
-                <div class="col-md-4">
-                    <div class="project_card">
-                        <div class="project_card_content">
-                            <div class="">
-                                <h3>Westkoast Official Website</h3>
-                                <p>I was part of the awesome team that was responsible for bringing the design to life
-                                </p>
-                                <a href="https:://westkoast.netlify.com" class="btn hvr-bounce-in">Visit Site</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a href="https:://westkoast.netlify.com" target="_blank" class="btn hvr-bounce-in mt-2">View more</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="wrapper testimonial mt-5">
-        <div class="testimonial_content_holder">
-            <div class="testimonial_content">
-            <h3>People say nice things about me</h3>
-            <h3>"</h3>
-            <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis modi libero, sint vel harum veritatis
-                rerum error ratione illum qui quis, minus similique! Ipsum optio qui delectus molestiae harum eveniet.
-            </p>
+                <a href="#about" class="angle_down animated bounce">
+                    <i class="fas fa-angle-double-down"></i>
+                </a>
             </div>
         </div>
 
-    </div>
+        <div class="About wrapper ml-5" id="about">
+            <h1> <span class="orange">#</span>ABOUT ME✌️</h1>
+            <p>Things you'd like to know</p>
 
-    <div class="wrapper ml-5" id="contact">
-        <div class="contact_content">
-            <h3>Leave a message</h3>
-            <form action="https://usebasin.com/f/3d0a6e5da0dc" method="POST">
+            <div class="about_content">
+                <p>Hi! My name is <span class="orange">Ogbe Daniel</span>. I am a Web Developer, and I'm very passionate
+                    and
+                    dedicated to my work.
+                    With 2 years experience as a Web developer, I believe I have acquired the skills and knowledge
+                    necessary to make your project a success. I enjoy every step of the design process, from discussion
+                    and
+                    collaboration to concept and execution, but I find the most satisfaction in seeing the finished
+                    product
+                    do everything for you that it was created to do.</p>
+            </div>
+            <a href="#contact" class="btn hvr-bounce-in mt-2">Send Message </a>
+        </div>
+
+        <div id="skills" class="wrapper ml-5">
+
+            <h2 class="mb-4"><span class="blue">#</span>MyStack💪</h2>
+
+            <div class="progress_holder mt-2">
+                <div class="progress_bar" id="htmlProgress"></div>
+                <span>HTML5 90%</span>
+            </div>
+            <div class="progress_holder mt-2">
+                <div class="progress_bar" id="cssProgress"></div>
+                <span>CSS 85%</span>
+            </div>
+            <div class="progress_holder mt-2">
+                <div class="progress_bar" id="jsProgress"></div>
+                <span>Javascript 60%</span>
+            </div>
+            <div class="progress_holder mt-2">
+                <div class="progress_bar" id="figmaProgress"></div>
+                <span>Figma 50% </span>
+            </div>
+
+        </div>
+
+
+        <div class="wrapper ml-5" id="projects">
+            <h2 class="mb-4"><span class="orange">#</span>Some of my Projects</h2>
+            <p>Some of my beautifully coded projects</p>
+
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6">
-                        <input type="text" placeholder="Full name" required></input>
-                        <input type="email" placeholder="Email" required></input>
-                        <input type="tel" placeholder="Phone" required></input>
+                    <div class="col-md-4">
+                        <div class="project_card">
+                            <div class="project_card_content">
+                                <div class="">
+                                    <h3>Westkoast Official Website</h3>
+                                    <p>I was part of the awesome team that was responsible for bringing the design to
+                                        life
+                                    </p>
+                                    <a href="https:://westkoast.netlify.com" target="_blank"
+                                        class="btn hvr-bounce-in">Visit
+                                        Site</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <textarea placeholder="Message"></textarea>
-                        <button type="submit" class="btn hvr-bounce-in mt-2">Send Message </a>
+                    <div class="col-md-4">
+                        <div class="project_card">
+                            <div class="project_card_content">
+                                <div class="">
+                                    <h3>d-buddy</h3>
+                                    <p>A simple landing page for a delivery firm in my local area.
+                                    </p>
+                                    <a href="#" class="btn_alt hvr-bounce-in">Site Unavailable</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="project_card">
+                            <div class="project_card_content">
+                                <div class="">
+                                    <h3>Westkoast Official Website</h3>
+                                    <p>I was part of the awesome team that was responsible for bringing the design to
+                                        life
+                                    </p>
+                                    <a href="https:://westkoast.netlify.com" class="btn hvr-bounce-in">Visit Site</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="https:://westkoast.netlify.com" target="_blank" class="btn hvr-bounce-in mt-2 view_more">View
+                        more</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="wrapper testimonial mt-5">
+            <div class="testimonial_content_holder">
+                <div class="testimonial_content">
+                    <h3>People say nice things about me</h3>
+                    <span class="quote">"</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis modi libero, sint vel harum
+                        veritatis
+                        rerum error ratione illum qui quis, minus similique! Ipsum optio qui delectus molestiae harum
+                        eveniet Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis modi libero, sint vel harum
+                        veritatis
+                        rerum error ratione illum qui quis, minus similique! Ipsum optio qui delectus molestiae harum
+                        eveniet.
+                    </p>
+                    <div class="testimonial_img_holder">
+                        <div class="testimonial_img_content">
+                            <img src="assets/img/tammy.JPG" alt="">
+                        </div>
+                    </div>
+                    <div class="testifier mt-2">
+                        <a href="https://ogurinkabenjamin.me" target="_blank" class="blue">Ogurinka Benjamin</a>
+                        <p>Lead Frontend Developer, Proinsight technologies</p>
                     </div>
                 </div>
-            </form>
+            </div>
+
+        </div>
+
+        <div class="wrapper ml-5" id="contact">
+            <div class="contact_content">
+                <h3>Leave a message</h3>
+                <form action="https://usebasin.com/f/3d0a6e5da0dc" method="POST">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="text" placeholder="Full name" required></input>
+                            <input type="email" placeholder="Email" required></input>
+                            <input type="tel" placeholder="Phone" required></input>
+                        </div>
+                        <div class="col-md-6">
+                            <textarea placeholder="Message"></textarea>
+                            <button type="submit" class="btn hvr-bounce-in mt-2">Send Message </a>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    </div>
-
 </body>
 <script src="js/script.js"></script>
 
