--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                                 <div class="">
                                     <i class="fab fa-figma"></i>
                                     <h4 class="mt-4">UI/UX Designer</h4>
-                                    <p class="mt-2">I design awesome wireframes and mockups for websites and mobile
+                                    <p class="mt-2 small">I design awesome wireframes and mockups for websites and
+                                        mobile
                                         applications</p>
                                 </div>
                             </div>
@@ -126,7 +127,8 @@
                                 <div class="">
                                     <i class="fas fa-laptop-code"></i>
                                     <h4 class="mt-4">Web Development</h4>
-                                    <p class="mt-2">I design and develope user interfaces for websites and web apps</p>
+                                    <p class="mt-2 small">I design and develope user interfaces for websites and web
+                                        apps</p>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +139,8 @@
                                 <div class="">
                                     <i class="fas fa-tools"></i>
                                     <h4 class="mt-4">Web Maintenance</h4>
-                                    <p class="mt-2">I always ensure that I maintain and update my projects with the
+                                    <p class="mt-2 small">I always ensure that I maintain and update my projects with
+                                        the
                                         latest web technologies</p>
                                 </div>
                             </div>
@@ -186,7 +189,8 @@
                                         <img src="assets/img/westkoast logo.png" class="w-100" alt="">
                                     </div>
                                     <h3 class="mt-4">Westkoast Official Website</h3>
-                                    <p>I was part of the awesome team that was responsible for bringing the design to
+                                    <p class="small">I was part of the awesome team that was responsible for bringing
+                                        the design to
                                         life
                                     </p>
                                     <a href="https://westkoast.netlify.com/" target="_blank"
@@ -203,9 +207,10 @@
                                         <img src="assets/img/d-buddy img.svg" class="w-100" alt="">
                                     </div>
                                     <h3 class="mt-4">d-buddy</h3>
-                                    <p>A simple landing page for a delivery firm in my local area.
+                                    <p class="small">A simple landing page for a delivery firm in my local area.
                                     </p>
-                                    <a href="#" class="btn_alt hvr-bounce-in">Site Unavailable</a>
+                                    <a href="http://oke.codes/d-buddy/" class="btn hvr-bounce-in" target="_blank">Visit
+                                        Site</a>
                                 </div>
                             </div>
                         </div>
@@ -218,9 +223,10 @@
                                         <img src="assets/img/toonix img.svg" class="w-100" alt="">
                                     </div>
                                     <h3 class="mt-4">Toonix</h3>
-                                    <p>A simple landing page for a music streaming application.
+                                    <p class="small">A simple landing page for a music streaming application.
                                     </p>
-                                    <a href="https://toonix.netlify.com/" target="_blank" class="btn hvr-bounce-in">Visit Site</a>
+                                    <a href="https://toonix.netlify.com/" target="_blank"
+                                        class="btn hvr-bounce-in">Visit Site</a>
                                 </div>
                             </div>
                         </div>
@@ -232,8 +238,7 @@
         <div class="wrapper testimonial mt-5">
             <div class="testimonial_content_holder">
                 <div class="testimonial_content">
-                    <h3>People say nice things about me</h3>
-                    <span class="quote">"</span>
+                    <h1 class="quote">"</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis modi libero, sint vel harum
                         veritatis
                         rerum error ratione illum qui quis, minus similique! Ipsum optio qui delectus molestiae harum
@@ -249,8 +254,8 @@
                         </div>
                     </div>
                     <div class="testifier mt-2">
-                        <a href="https://ogurinkabenjamin.me" target="_blank" class="blue">Ogurinka Benjamin</a>
-                        <p>Lead Frontend Developer, Proinsight technologies</p>
+                        <a href="https://ogurinkabenjamin.me" target="_blank" class="orange">Ogurinka Benjamin</a>
+                        <p class="small">Lead Frontend Developer, Proinsight technologies</p>
                     </div>
                 </div>
             </div>
@@ -269,14 +274,33 @@
                         </div>
                         <div class="col-md-6">
                             <textarea placeholder="Message"></textarea>
-                            <button type="submit" class="send btn hvr-bounce-in mt-2">Send Message </a>
+                            <button type="submit" class="send btn mt-2">Send Message </a>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
+        <footer class="mt-4">
+            <div class="footer_text">
+                <p>Made with ❤️ and 🎧 by ME</p>
+            </div>
+            <div class="socials_holder">
+                <a href="https://www.instagram.com/dhar_niell/?hl=en" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://github.com/OkeOgbe" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </div>
+
+
+        </footer>
     </div>
     <button id="topBtn" class="scroll_top" title="Let's get higher"><i class="fas fa-arrow-up"></i></button>
+
 </body>
 <script src="js/script.js"></script>
 
