--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="wrapper ml-5" id="contact">
             <div class="contact_content">
                 <h3>Leave a message</h3>
-                <form action="https://usebasin.com/f/3d0a6e5da0dc" method="POST">
+                <form action="https://usebasin.com/f/3d0a6e5da0dc" method="GET">
                     <div class="row">
                         <div class="col-md-6">
                             <input type="text" placeholder="Full name" required></input>
