--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
         <div class="wrapper ml-5" id="contact">
             <div class="contact_content">
                 <h3>Leave a message</h3>
-                <form action="https://usebasin.com/f/3d0a6e5da0dc" method="GET">
+                <form action="https://usebasin.com/f/3d0a6e5da0dc" method="POST">
                     <div class="row">
                         <div class="col-md-6">
                             <input type="text" placeholder="Full name" required></input>
-                            <input type="email" placeholder="Email" required></input>
+                            <input type="email" placeholder="Email" name="email" required></input>
                             <input type="tel" placeholder="Phone" required></input>
                         </div>
                         <div class="col-md-6">
