mobile view update

--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
 
     <div id="body">
         <div class="hero wrapper">
+            <div class="side_socials_holder">
+                <div class="mt-2">
+                    <a href="https://www.instagram.com/dhar_niell/?hl=en" target="_blank">
+                        <i class="fab fa-instagram orange"></i>
+                    </a>
+                </div>
+                <div class="mt-2">
+                    <a href="https://github.com/OkeOgbe" target="_blank">
+                        <i class="fab fa-github orange"></i>
+                    </a>
+                </div>
+                <div class="mt-2">
+                    <a href="" target="_blank">
+                        <i class="fab fa-twitter orange"></i>
+                    </a>
+                </div>
+            </div>
             <div class="hero_content">
                 <div class="hero_img_holder">
                     <img src="assets/img/avataaars.png" class="w-100">
@@ -112,7 +129,7 @@
                             <div class="role_content">
                                 <div class="">
                                     <i class="fab fa-figma"></i>
-                                    <h4 class="mt-4">UI/UX Designer</h4>
+                                    <h4 class="mt-4">UI/UX Design</h4>
                                     <p class="mt-2 small">I design awesome wireframes and mockups for websites and
                                         mobile
                                         applications</p>
@@ -127,7 +144,7 @@
                                 <div class="">
                                     <i class="fas fa-laptop-code"></i>
                                     <h4 class="mt-4">Web Development</h4>
-                                    <p class="mt-2 small">I design and develope user interfaces for websites and web
+                                    <p class="mt-2 small">I design and develop user interfaces for websites and web
                                         apps</p>
                                 </div>
                             </div>
@@ -280,24 +297,6 @@
                 </form>
             </div>
         </div>
-        <footer class="mt-4">
-            <div class="footer_text">
-                <p>Made with ❤️ and 🎧 by ME</p>
-            </div>
-            <div class="socials_holder">
-                <a href="https://www.instagram.com/dhar_niell/?hl=en" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="https://github.com/OkeOgbe" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </div>
-
-
-        </footer>
     </div>
     <button id="topBtn" class="scroll_top" title="Let's get higher"><i class="fas fa-arrow-up"></i></button>
 
