--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
     <div class="bg_circle"></div>
-    <section class="hero section_padding pb-5">
+    <section class="hero section_padding pb-5 pt-4">
         <div class="row reverse-column-order">
             <div class="col-md-6">
                 <div class="hero_text_holder">
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-6">
                 <div class="hero_img_holder">
-                    <img src="assets/img/hero_img.PNG" alt="">
+                    <img src="assets/img/oke 3d-1.png" class="w-100" alt="">
                 </div>
             </div>
         </div>
